--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-  <nav class="nav">
+  <nav class="nav"><!-- definindo toda a barra de navegação -->
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="nav-title">
         Atividade Prática de portifólio
       </div>
     </div>  
-    <ul class="nav-list">
+    <ul class="nav-list"><!-- definindo todos os links ancorados na própria página -->
       <li><a href="#sobre">Sobre</a></li>
       <li><a href="#formacao">Formação</a></li>
       <li><a href="#programacao">Programação</a></li>
@@ -26,7 +26,7 @@
 
 
   <main>
-    <section id="sobre">
+    <section id="sobre"><!-- primeira sessão sobre mim -->
       <h1>Sobre mim</h1>
       <h3>Como conheci a Programação? 👨‍💻</h3>
       <p>Sempre tive um contato mais proximo com a programação, pois meu pai desenvolve sistema de gerência de produtos e finenceiro para: moteis, pizzarias, restaurantes, lojas de auto-peças e entre outros.</p>
@@ -36,7 +36,7 @@
       <p>Hoje já considero um desenvolvedor Java Júnior, já fiz diversos projetos e sou apaixonado por essa area.</p>
     </section>
 
-    <section id="formacao">
+    <section id="formacao"><!-- segunda sessão sobre a minha formação academica -->
       <h1>Minha formação acadêmica 👨‍🎓</h1>
       <h3>Na faculdade</h3>
       <p>Iniciei este ano de 2023 o cuso de Tecnologia em Análise e Desenvolvimento de sistemas na Uninter e o previsto é que no final do ano de 2025 eu esteja formado e já atuando na area.</p>
@@ -44,7 +44,7 @@
       <p>Já tenho certificado de um curso de c/c++ e dois de Java, sendo que quero seguir carreira como desenvolvedor Java Back-End!</p>
     </section>
 
-    <section id="programacao">
+    <section id="programacao"><!-- terceira sessão sobre dicas para começar a programar -->
       <h1>Dicas de formas para começar a programar 💻</h1>
       <h3>1. Escolha a Linguagem Certa:</h3>
       <p>O primeiro passo para começar a programar é escolher uma linguagem de programação adequada ao seu objetivo. Se você é um iniciante, linguagens como Python são excelentes opções devido à sua sintaxe simples e versatilidade. Python é amplamente utilizado em ciência de dados, desenvolvimento web e automação, tornando-o ideal para quem está começando. Outras opções populares incluem JavaScript para desenvolvimento web, Java para aplicativos Android e C# para desenvolvimento de jogos.</p>
@@ -56,7 +56,7 @@
       <p>A internet está repleta de recursos gratuitos para ajudá-lo a aprender a programar. Plataformas como Codecademy, Coursera e edX oferecem cursos interativos ministrados por especialistas. Além disso, participe de comunidades online como GitHub, Stack Overflow e Reddit, onde você pode fazer perguntas, colaborar em projetos e aprender com outros desenvolvedores. A interação com a comunidade ajuda a expandir seus conhecimentos e oferece suporte quando você fica preso em um problema de programação.</p>
     </section>
 
-    <section id="jogos">
+    <section id="jogos"><!-- quarta sessão para dica de jogos -->
       <h1>Dica de jogos para relaxar 🎮</h1>
       <h3>Stardew Valley (PC, XONE, PS4, Android e iOS)</h3>
       <p>Um jogo de fazendinha, onde você cuida dos seus animais e plantações, produz itens artesanais, explora cavernas e faz amigos. Um jogo simples e divertido, que te permite viver uma vida tranquila no campo.</p>
