--- a/index.html
+++ b/index.html
@@ -10,18 +10,28 @@
 
 <body>
   <nav class="nav"><!-- definindo toda a barra de navegação -->
+    
     <input type="checkbox" id="nav-check">
     <div class="nav-header">
       <div class="nav-title">
-        Atividade Prática de portifólio
+        Atividade pratica de portifólio
       </div>
-    </div>  
+    </div>
+    <div class="nav-btn">
+      <label for="nav-check">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+    </div>
+    
     <ul class="nav-list"><!-- definindo todos os links ancorados na própria página -->
       <li><a href="#sobre">Sobre</a></li>
       <li><a href="#formacao">Formação</a></li>
       <li><a href="#programacao">Programação</a></li>
       <li><a href="#jogos">Jogos</a></li>
     </ul>
+
   </nav>
 
 
