atualizando os links

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <ul class="nav-list"><!-- definindo todos os links ancorados na própria página -->
       <li><a href="#sobre">Sobre</a></li>
       <li><a href="#formacao">Formação</a></li>
-      <li><a href="#programacao">Programação</a></li>
-      <li><a href="#jogos">Jogos</a></li>
+      <li><a href="#projetos">Projetos</a></li>
+      <li><a href="#contato">Contato</a></li>
     </ul>
 
   </nav>
@@ -44,6 +44,9 @@
       <h3>Como comecei a desenvolver?</h3>
       <p>Comecei com um curso para desenvolvimento de jogos da Danki Code, me desanimei por ter um professor extremamente ruim, mas aos meus 17 anos voltei a programar.</p>
       <p>Hoje já considero um desenvolvedor Java Júnior, já fiz diversos projetos e sou apaixonado por essa area.</p>
+
+      <h4>Contato:</h4>
+      <img src="" alt="">
     </section>
 
     <section id="formacao"><!-- segunda sessão sobre a minha formação academica -->
@@ -54,26 +57,25 @@
       <p>Já tenho certificado de um curso de c/c++ e dois de Java, sendo que quero seguir carreira como desenvolvedor Java Back-End!</p>
     </section>
 
-    <section id="programacao"><!-- terceira sessão sobre dicas para começar a programar -->
-      <h1>Dicas de formas para começar a programar 💻</h1>
-      <h3>1. Escolha a Linguagem Certa:</h3>
-      <p>O primeiro passo para começar a programar é escolher uma linguagem de programação adequada ao seu objetivo. Se você é um iniciante, linguagens como Python são excelentes opções devido à sua sintaxe simples e versatilidade. Python é amplamente utilizado em ciência de dados, desenvolvimento web e automação, tornando-o ideal para quem está começando. Outras opções populares incluem JavaScript para desenvolvimento web, Java para aplicativos Android e C# para desenvolvimento de jogos.</p>
-      <h3>2. Aprenda os Fundamentos:</h3>
-      <p>Antes de se aprofundar em projetos complexos, é crucial entender os fundamentos da programação. Familiarize-se com conceitos como variáveis, estruturas de controle (como loops e condicionais), funções e estruturas de dados (como listas e dicionários). Existem inúmeros recursos online, como tutoriais em vídeo, cursos interativos e livros, que ajudam a solidificar esses conceitos básicos.</p>
-      <h3>3. Pratique Regularmente com Projetos Pequenos:</h3>
-      <p>A prática constante é essencial para desenvolver habilidades de programação. Comece com projetos pequenos e gradualmente aumente a complexidade à medida que ganha confiança. Por exemplo, você pode criar um programa simples de calculadora, desenvolver um site estático usando HTML e CSS, ou até mesmo criar um jogo de adivinhação. Ao trabalhar em projetos reais, você ganha experiência prática e enfrenta desafios do mundo real, o que é fundamental para o aprendizado.</p>
-      <h3>4. Utilize Recursos Online e Comunidades:</h3>
-      <p>A internet está repleta de recursos gratuitos para ajudá-lo a aprender a programar. Plataformas como Codecademy, Coursera e edX oferecem cursos interativos ministrados por especialistas. Além disso, participe de comunidades online como GitHub, Stack Overflow e Reddit, onde você pode fazer perguntas, colaborar em projetos e aprender com outros desenvolvedores. A interação com a comunidade ajuda a expandir seus conhecimentos e oferece suporte quando você fica preso em um problema de programação.</p>
+    <section id="projetos"><!-- terceira sessão sobre dicas para começar a programar -->
+      <h1>Alguns projetos que já fiz: 💻</h1>
+      <h3>1 Um problema por dia:</h3>
+      <p>Esse trabalho foi no intúito de resolver problemas mateáticos, 1 por dia: <a href="https://github.com/pedrelosa/umProblemaPorDia">Clique aqui</a></p>
+      <h3>2 Calculadora Swing:</h3>
+      <p>Essa é uma calculadora usando o Java Swing <a href="https://github.com/pedrelosa/calculadora-swing">Clique aqui</a></p>
+      <h3>3 Campo minado com Java:</h3>
+      <p>Projeto simples de campo minado, porém misturando o Java Swing, porém sem muito gráfico, focando mais nos JOptionPane <a href="https://github.com/pedrelosa/primeiro-projeto-campo-minado-java">Clique aqui</a></p>
     </section>
 
-    <section id="jogos"><!-- quarta sessão para dica de jogos -->
-      <h1>Dica de jogos para relaxar 🎮</h1>
-      <h3>Stardew Valley (PC, XONE, PS4, Android e iOS)</h3>
-      <p>Um jogo de fazendinha, onde você cuida dos seus animais e plantações, produz itens artesanais, explora cavernas e faz amigos. Um jogo simples e divertido, que te permite viver uma vida tranquila no campo.</p>
-      <h3>GRIS (PC, Switch, PS4, iOS)</h3>
-      <p>Uma obra de arte sobre a superação, onde você controla uma garota que perdeu sua voz e precisa restaurar a cor do seu mundo. Um jogo sem diálogos, mas com uma trilha sonora emocionante e um visual deslumbrante. Um jogo que te faz refletir e se emocionar.</p>
-      <h3>Animal Crossing: New Horizons (Switch)</h3>
-      <p>Um jogo de simulação, onde você vive em uma ilha tropical cheia de animais simpáticos. Você pode decorar sua casa, plantar flores, pescar, caçar insetos, visitar outras ilhas e fazer amizade com os moradores. Um jogo que te dá liberdade e alegria.</p>
+    <section id="contato"><!-- quarta sessão para dica de jogos -->
+      <h1>Formulário para contato 📞</h1>
+
+      <form>
+        <span>Nome:</span>  <input type="text" name="nome" id="nome"><br><br>
+        <span>Email:</span>  <input type="email" name="email" id="email"><br><br>
+        <span>Mensagem:</span> <textarea name="mensagem" id="mensagem" cols="30" rows="10"></textarea>
+      </form>
+    
     </section>
   </main>
   
